.movable-row wrap fix

--- a/ui/client/stylesheets/graph.styl
+++ b/ui/client/stylesheets/graph.styl
@@ -260,9 +260,8 @@ modalContent(modalBkgColor,errorColor,modalLabelTextColor,testResultsColor,modal
       display flex
       flex-wrap wrap
     .movable-row
-      display flex
       margin-top 0
-      margin-bottom 14px
+      flex-wrap nowrap
     .node-label
       color modalLabelTextColor
       width labelWidth
